[VK] Change to INITIAL state when keyboard is being disabled.

Currently, when we disable the keyboard, we directly reset the state
back to UNKNOWN without logging or validation. This means that in the
UMA metrics for state transitions, the transitions going into a state
does not add up to the transitions going out of a state.

This patch explicitly changes the state back to INITIAL when the
keyboard is disabled. When the keyboard is about to be disabled,
the only valid states are INITIAL, LOADING and HIDDEN. We don't
change if the current state is INITIAL to avoid self-transitions.

Bug: 775354
Change-Id: Idab146e017d179a9086808481f3ed65b6f0dfbcf
Reviewed-on: https://chromium-review.googlesource.com/1163346
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Commit-Queue: Darren Shen <shend@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580815}
Former-commit-id: 44f5e9c235afe4ab0cfaaec1c55d323e7f732a2f